fix: some spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -1020,12 +1020,15 @@ header {
                 line-height: 1.4;
                 color: $mainTextColor;
                 width: 91%;
-                margin-bottom: 2.8em;
+                margin-bottom: 2.3em;
                 @include lg {
                     line-height: 1.5;
                     margin-bottom: 3em;
                     font-size: $font20px;
                     width: 61%;
+                }
+                &:last-of-type {
+                    margin-bottom: 2.8em;
                 }
             }
         }
